<resources>
    <string name="app_name">PaychecksApp</string>
    <string name="title_scan">Скан</string>
    <string name="title_saved">Чеки</string>
    <string name="title_statistics">Статистика</string>

    <string name="check_shop_userInn">ИНН</string>
    <string name="check_number">Чек №</string>
    <string name="check_shift_number">Смена №</string>
    <string name="check_operator">Кассир</string>
    <string name="good_number">№</string>
    <string name="good_name">Название</string>
    <string name="good_price">Цена</string>
    <string name="good_quantity">Кол-во</string>
    <string name="good_sum">Сумма</string>
    <string name="check_total_sum">ИТОГО</string>
    <string name="check_reg_id_kkt">РЕГ. НОМЕР ККТ:</string>
    <string name="check_number_kkt">ЗАВОД. № ККТ:</string>
    <string name="check_fn">ФН:</string>
    <string name="check_fd">ФД:</string>
    <string name="check_fpd">ФПД:</string>
    <string name="check_close_button">Закрыть</string>
    <string name="check_save_button">Сохранить</string>
    <string name="check_delete_button">Удалить</string>
    <string name="check_category_button_default">Без категории</string>

    <string name="check_dialog_new_category_title">Выберите категорию чека</string>
    <string name="check_dialog_new_category_radio_edit_text">Новая категория</string>
    <string name="check_dialog_new_category_choice_button">Выбрать</string>

    <string name="statistics_title">Статистика</string>
    <string name="statistics_total_checks">чеков</string>
    <string name="statistics_total_goods">товаров</string>
    <string name="statistics_sort_goods_by_asc_price">По возрастанию цены</string>
    <string name="statistics_sort_goods_by_desc_price">По убыванию цены</string>
    <string name="statistics_sort_period_default_label">За все время</string>

    <string name="saved_list_is_empty">Ничего не найдено</string>
    <string name="saved_sort_date_by_bought">По дате покупки</string>
    <string name="saved_sort_date_by_check_add">По дате добавления</string>
    <string name="saved_sort_period">Период</string>
    <string name="saved_sort_total_sum">Сумма</string>
    <string name="saved_sort_total_sum_label">Введите сумму в рублях</string>
    <string name="saved_sort_total_sum_from_hint">От</string>
    <string name="saved_sort_total_sum_till_hint">До</string>

</resources>