<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_scan">


    <fragment
        android:id="@+id/navigation_saved"
        android:name="ru.savenkov.paychecksapp.ui.saved.SavedFragment"
        android:label="@string/title_saved"
        tools:layout="@layout/fragment_saved" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="ru.savenkov.paychecksapp.ui.check.CheckFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_check" >
        <action
            android:id="@+id/action_navigation_scan_to_checkFragment"
            app:destination="@id/checkFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="ru.savenkov.paychecksapp.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/checkFragment"
        android:name="ru.savenkov.paychecksapp.ui.check.CheckFragment"
        android:label="fragment_check"
        tools:layout="@layout/fragment_check" />
</navigation>