<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="20dp">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        >

        <TextView
            android:id="@+id/sum_title"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/saved_sort_total_sum_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <EditText
            android:id="@+id/input_sum_from"
            android:singleLine="true"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/sum_title"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/saved_sort_total_sum_from_hint"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_sum_till"
            android:singleLine="true"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/sum_title"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/saved_sort_total_sum_till_hint"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/choose_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_sum_till"
            android:text="@string/check_dialog_new_category_choice_button"
            android:textAllCaps="false" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>