<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="20dp">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        >

        <TextView
            android:id="@+id/category_title"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/check_dialog_new_category_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_no_category"
                android:text="Без категории"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="35dp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_inputText"
                android:layout_width="30dp"
                android:layout_height="35dp" />
        </RadioGroup>

        <EditText
            android:id="@+id/input_category"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="@id/radioGroup"
            android:layout_marginStart="30dp"
            app:layout_constraintBottom_toBottomOf="@id/radioGroup"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/check_dialog_new_category_radio_edit_text"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/choose_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"
            android:layout_marginTop="5dp"
            android:text="@string/check_dialog_new_category_choice_button"
            android:textAllCaps="false" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>