<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/check_count"
        android:includeFontPadding="false"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:includeFontPadding="false"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:text="@string/statistics_total_checks"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/check_count"
        />

    <TextView
        android:id="@+id/good_count"
        android:includeFontPadding="false"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/pieChart"
        />

    <TextView
        android:includeFontPadding="false"
        android:textStyle="bold"
        android:text="@string/statistics_total_goods"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/pieChart"
        />

    <com.google.android.material.chip.Chip
        android:id="@+id/sort_button"
        android:text="@string/statistics_sort_goods_by_desc_price"
        android:textColor="@color/text_color"
        style="@style/Widget.MaterialComponents.Chip.Action"
        app:iconStartPadding="4dp"
        app:textStartPadding="2dp"
        android:layout_marginStart="5dp"
        app:chipIcon="@drawable/ic_sort_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pieChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>