<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/shopUser"
        android:layout_marginHorizontal="5dp"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/shopName"
        android:textColor="@color/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/shopUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/shopAddress"
        android:textColor="@color/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/shopName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/shopUserInn"
        android:textColor="@color/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/shopAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/dateTime"
        android:textColor="@color/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/shopUserInn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/checkNumber"
        android:textColor="@color/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dateTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/checkShiftNumber"
        android:textColor="@color/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/checkNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/checkType"
        android:textColor="@color/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/checkShiftNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/goods_title_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#4F000000"
        app:layout_constraintTop_toBottomOf="@id/checkType"
        />

    <TextView
        android:id="@+id/goodNumberTitle"
        android:text="@string/good_number"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/goods_title_divider"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/goodNameTitle"
        android:text="@string/good_name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/goods_title_divider"
        app:layout_constraintStart_toEndOf="@id/goodNumberTitle"
        />

    <TextView
        android:id="@+id/goodSumTitle"
        android:text="@string/good_sum"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/goods_title_divider"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/goodQuantityTitle"
        android:text="@string/good_quantity"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/goods_title_divider"
        app:layout_constraintEnd_toStartOf="@id/goodSumTitle"
        />

    <TextView
        android:id="@+id/goodPriceTitle"
        android:text="@string/good_price"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/goods_title_divider"
        app:layout_constraintEnd_toStartOf="@id/goodQuantityTitle"
        />

    <View
        android:id="@+id/goods_title_divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#4F000000"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/goodNameTitle"
        />


</androidx.constraintlayout.widget.ConstraintLayout>